--- a/app/src/main/res/menu/menu_devices.xml
+++ b/app/src/main/res/menu/menu_devices.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/ble_scan"
-        android:title="SCAN"
-        app:showAsAction="always" />
+        android:title="@string/scan"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/ble_scan_stop"
-        android:title="STOP"
+        android:title="@string/stop"
         app:showAsAction="always"
         android:visible="false" />
     <item
         android:id="@+id/bt_settings"
-        android:title="Bluetooth settings" />
+        android:title="@string/bluetooth_settings" />
 </menu>
