--- a/app/src/main/res/layout/fragment_terminal.xml
+++ b/app/src/main/res/layout/fragment_terminal.xml
@@ -23,22 +23,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/send_text"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/startbtn"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:inputType="text|textNoSuggestions"
-            android:singleLine="true" />
+            android:text="@string/start" />
 
-        <ImageButton
-            android:id="@+id/send_btn"
+        <Button
+            android:id="@+id/stopbtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_send_white_24dp" />
+            android:layout_height="58dp"
+            android:layout_weight="1"
+            android:text="@string/stop" />
     </LinearLayout>
 
 </LinearLayout>
